test/functions/bradc/queryClassArgGenerics-bad2.good
queryClassArgGenerics-bad2.chpl:11: error: 'tt' has multiple definitions, redefined at:
  queryClassArgGenerics-bad2.chpl:12
